// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectPreviewBody /> should render correctly project preview body & elements for closed step 1`] = `
<div
  className="box project__preview__body"
>
  <div
    className="project__preview__body__infos"
  >
    <Connect(ProjectPreviewThemes)
      project={
        Object {
          "_links": Object {
            "show": "http://capco/show-link",
          },
          "hasParticipativeStep": false,
          "steps": Array [
            Object {
              "_links": Object {
                "show": "http://capco/closed-step1/show-link",
              },
              "endAt": "2016-12-28T09:00:24+01:00",
              "startAt": "2016-12-20T09:00:24+01:00",
              "status": "closed",
              "title": "closed step 1",
              "type": "presentation",
            },
            Object {
              "_links": Object {
                "show": "http://capco/closed-step2/show-link",
              },
              "endAt": "2017-01-28T09:00:24+01:00",
              "startAt": "2017-01-20T09:00:24+01:00",
              "status": "closed",
              "title": "closed step 2",
              "type": "presentation",
            },
          ],
          "title": "Name of my project",
        }
      }
    />
    <h4
      className="project__preview__title"
      style={
        Object {
          "height": "auto",
          "lineHeight": "auto",
        }
      }
    >
      <OverlayTrigger
        defaultOverlayShown={false}
        overlay={
          <Tooltip
            bsClass="tooltip"
            id="project-undefined-tooltip"
            placement="right"
          >
            Name of my project
          </Tooltip>
        }
        placement="top"
        trigger={
          Array [
            "hover",
            "focus",
          ]
        }
      >
        <a
          href="http://capco/show-link"
        >
          <div
            style={
              Object {
                "width": "98%",
              }
            }
          >
            <Truncate
              ellipsis="…"
              lines={3}
            >
              Name of my project
            </Truncate>
          </div>
        </a>
      </OverlayTrigger>
    </h4>
  </div>
  <ProjectPreviewProgressBar
    actualStep={
      Object {
        "_links": Object {
          "show": "http://capco/closed-step2/show-link",
        },
        "endAt": "2017-01-28T09:00:24+01:00",
        "startAt": "2017-01-20T09:00:24+01:00",
        "status": "closed",
        "title": "closed step 2",
        "type": "presentation",
      }
    }
    project={
      Object {
        "_links": Object {
          "show": "http://capco/show-link",
        },
        "hasParticipativeStep": false,
        "steps": Array [
          Object {
            "_links": Object {
              "show": "http://capco/closed-step1/show-link",
            },
            "endAt": "2016-12-28T09:00:24+01:00",
            "startAt": "2016-12-20T09:00:24+01:00",
            "status": "closed",
            "title": "closed step 1",
            "type": "presentation",
          },
          Object {
            "_links": Object {
              "show": "http://capco/closed-step2/show-link",
            },
            "endAt": "2017-01-28T09:00:24+01:00",
            "startAt": "2017-01-20T09:00:24+01:00",
            "status": "closed",
            "title": "closed step 2",
            "type": "presentation",
          },
        ],
        "title": "Name of my project",
      }
    }
  />
  <div
    className="project__preview__actions"
  >
    <a
      href="http://capco/closed-step2/show-link"
    >
      <FormattedMessage
        id="project.preview.action.seeResult"
        values={Object {}}
      />
    </a>
     
     
  </div>
</div>
`;

exports[`<ProjectPreviewBody /> should render correctly project preview body & elements for future step 1`] = `
<div
  className="box project__preview__body"
>
  <div
    className="project__preview__body__infos"
  >
    <Connect(ProjectPreviewThemes)
      project={
        Object {
          "_links": Object {
            "show": "http://capco/show-link",
          },
          "hasParticipativeStep": false,
          "steps": Array [
            Object {
              "status": "closed",
              "title": "Closed step",
            },
            Object {
              "_links": Object {
                "show": "http://capco/future-step1/show-link",
              },
              "endAt": "2017-12-28T09:00:24+01:00",
              "startAt": "2017-12-20T09:00:24+01:00",
              "status": "future",
              "title": "Future step 1",
              "type": "presentation",
            },
            Object {
              "_links": Object {
                "show": "http://capco/future-step2/show-link",
              },
              "endAt": "2018-01-28T09:00:24+01:00",
              "startAt": "2018-01-20T09:00:24+01:00",
              "status": "future",
              "title": "Future step 2",
              "type": "presentation",
            },
          ],
          "title": "Name of my project",
        }
      }
    />
    <h4
      className="project__preview__title"
      style={
        Object {
          "height": "auto",
          "lineHeight": "auto",
        }
      }
    >
      <OverlayTrigger
        defaultOverlayShown={false}
        overlay={
          <Tooltip
            bsClass="tooltip"
            id="project-undefined-tooltip"
            placement="right"
          >
            Name of my project
          </Tooltip>
        }
        placement="top"
        trigger={
          Array [
            "hover",
            "focus",
          ]
        }
      >
        <a
          href="http://capco/show-link"
        >
          <div
            style={
              Object {
                "width": "98%",
              }
            }
          >
            <Truncate
              ellipsis="…"
              lines={3}
            >
              Name of my project
            </Truncate>
          </div>
        </a>
      </OverlayTrigger>
    </h4>
  </div>
  <ProjectPreviewProgressBar
    actualStep={
      Object {
        "_links": Object {
          "show": "http://capco/future-step1/show-link",
        },
        "endAt": "2017-12-28T09:00:24+01:00",
        "startAt": "2017-12-20T09:00:24+01:00",
        "status": "future",
        "title": "Future step 1",
        "type": "presentation",
      }
    }
    project={
      Object {
        "_links": Object {
          "show": "http://capco/show-link",
        },
        "hasParticipativeStep": false,
        "steps": Array [
          Object {
            "status": "closed",
            "title": "Closed step",
          },
          Object {
            "_links": Object {
              "show": "http://capco/future-step1/show-link",
            },
            "endAt": "2017-12-28T09:00:24+01:00",
            "startAt": "2017-12-20T09:00:24+01:00",
            "status": "future",
            "title": "Future step 1",
            "type": "presentation",
          },
          Object {
            "_links": Object {
              "show": "http://capco/future-step2/show-link",
            },
            "endAt": "2018-01-28T09:00:24+01:00",
            "startAt": "2018-01-20T09:00:24+01:00",
            "status": "future",
            "title": "Future step 2",
            "type": "presentation",
          },
        ],
        "title": "Name of my project",
      }
    }
  />
  <div
    className="project__preview__actions"
  >
     
    <span
      className="excerpt-dark"
    >
      <FormattedMessage
        id="date.startAt"
        values={Object {}}
      />
       
      <FormattedDate
        day="numeric"
        month="long"
        value={2017-12-20T08:00:24.000Z}
        year="numeric"
      />
    </span>
     
  </div>
</div>
`;

exports[`<ProjectPreviewBody /> should render correctly project preview body & elements for open participative step (days left) 1`] = `
<div
  className="box project__preview__body"
>
  <div
    className="project__preview__body__infos"
  >
    <Connect(ProjectPreviewThemes)
      project={
        Object {
          "_links": Object {
            "show": "http://capco/show-link",
          },
          "hasParticipativeStep": true,
          "steps": Array [
            Object {
              "status": "closed",
              "title": "Closed step",
            },
            Object {
              "_links": Object {
                "show": "http://capco/step1/show-link",
              },
              "endAt": "2017-11-25T09:00:24+01:00",
              "startAt": "2017-01-10T09:00:24+01:00",
              "status": "open",
              "timeless": false,
              "title": "Open step 1",
              "type": "collect",
            },
            Object {
              "_links": Object {
                "show": "http://capco/step2/show-link",
              },
              "endAt": "2018-11-28T09:00:24+01:00",
              "startAt": "2017-11-20T09:00:24+01:00",
              "status": "open",
              "timeless": false,
              "title": "Open step 2",
              "type": "collect",
            },
            Object {
              "status": "future",
              "title": "Future step",
            },
          ],
          "title": "Name of my project",
        }
      }
    />
    <h4
      className="project__preview__title"
      style={
        Object {
          "height": "auto",
          "lineHeight": "auto",
        }
      }
    >
      <OverlayTrigger
        defaultOverlayShown={false}
        overlay={
          <Tooltip
            bsClass="tooltip"
            id="project-undefined-tooltip"
            placement="right"
          >
            Name of my project
          </Tooltip>
        }
        placement="top"
        trigger={
          Array [
            "hover",
            "focus",
          ]
        }
      >
        <a
          href="http://capco/show-link"
        >
          <div
            style={
              Object {
                "width": "98%",
              }
            }
          >
            <Truncate
              ellipsis="…"
              lines={3}
            >
              Name of my project
            </Truncate>
          </div>
        </a>
      </OverlayTrigger>
    </h4>
    <ProjectPreviewCounters
      project={
        Object {
          "_links": Object {
            "show": "http://capco/show-link",
          },
          "hasParticipativeStep": true,
          "steps": Array [
            Object {
              "status": "closed",
              "title": "Closed step",
            },
            Object {
              "_links": Object {
                "show": "http://capco/step1/show-link",
              },
              "endAt": "2017-11-25T09:00:24+01:00",
              "startAt": "2017-01-10T09:00:24+01:00",
              "status": "open",
              "timeless": false,
              "title": "Open step 1",
              "type": "collect",
            },
            Object {
              "_links": Object {
                "show": "http://capco/step2/show-link",
              },
              "endAt": "2018-11-28T09:00:24+01:00",
              "startAt": "2017-11-20T09:00:24+01:00",
              "status": "open",
              "timeless": false,
              "title": "Open step 2",
              "type": "collect",
            },
            Object {
              "status": "future",
              "title": "Future step",
            },
          ],
          "title": "Name of my project",
        }
      }
    />
  </div>
  <ProjectPreviewProgressBar
    actualStep={
      Object {
        "_links": Object {
          "show": "http://capco/step1/show-link",
        },
        "endAt": "2017-11-25T09:00:24+01:00",
        "startAt": "2017-01-10T09:00:24+01:00",
        "status": "open",
        "timeless": false,
        "title": "Open step 1",
        "type": "collect",
      }
    }
    project={
      Object {
        "_links": Object {
          "show": "http://capco/show-link",
        },
        "hasParticipativeStep": true,
        "steps": Array [
          Object {
            "status": "closed",
            "title": "Closed step",
          },
          Object {
            "_links": Object {
              "show": "http://capco/step1/show-link",
            },
            "endAt": "2017-11-25T09:00:24+01:00",
            "startAt": "2017-01-10T09:00:24+01:00",
            "status": "open",
            "timeless": false,
            "title": "Open step 1",
            "type": "collect",
          },
          Object {
            "_links": Object {
              "show": "http://capco/step2/show-link",
            },
            "endAt": "2018-11-28T09:00:24+01:00",
            "startAt": "2017-11-20T09:00:24+01:00",
            "status": "open",
            "timeless": false,
            "title": "Open step 2",
            "type": "collect",
          },
          Object {
            "status": "future",
            "title": "Future step",
          },
        ],
        "title": "Name of my project",
      }
    }
  />
  <div
    className="project__preview__actions"
  >
    <a
      href="http://capco/step1/show-link"
    >
      <FormattedMessage
        id="project.preview.action.participe"
        values={Object {}}
      />
    </a>
     
     
    <span
      className="excerpt"
    >
      <span
        className="excerpt_dark"
      >
        2
      </span>
       
      <FormattedMessage
        id="count.daysLeft"
        values={
          Object {
            "count": 2,
          }
        }
      />
    </span>
  </div>
</div>
`;

exports[`<ProjectPreviewBody /> should render correctly project preview body & elements for open participative step (hours left) 1`] = `
<div
  className="box project__preview__body"
>
  <div
    className="project__preview__body__infos"
  >
    <Connect(ProjectPreviewThemes)
      project={
        Object {
          "_links": Object {
            "show": "http://capco/show-link",
          },
          "hasParticipativeStep": true,
          "steps": Array [
            Object {
              "_links": Object {
                "show": "http://capco/step1/show-link",
              },
              "endAt": "2017-11-25T09:00:24+01:00",
              "startAt": "2017-01-10T09:00:24+01:00",
              "status": "open",
              "timeless": false,
              "title": "Open step 1",
              "type": "collect",
            },
          ],
          "title": "Name of my project",
        }
      }
    />
    <h4
      className="project__preview__title"
      style={
        Object {
          "height": "auto",
          "lineHeight": "auto",
        }
      }
    >
      <OverlayTrigger
        defaultOverlayShown={false}
        overlay={
          <Tooltip
            bsClass="tooltip"
            id="project-undefined-tooltip"
            placement="right"
          >
            Name of my project
          </Tooltip>
        }
        placement="top"
        trigger={
          Array [
            "hover",
            "focus",
          ]
        }
      >
        <a
          href="http://capco/show-link"
        >
          <div
            style={
              Object {
                "width": "98%",
              }
            }
          >
            <Truncate
              ellipsis="…"
              lines={3}
            >
              Name of my project
            </Truncate>
          </div>
        </a>
      </OverlayTrigger>
    </h4>
    <ProjectPreviewCounters
      project={
        Object {
          "_links": Object {
            "show": "http://capco/show-link",
          },
          "hasParticipativeStep": true,
          "steps": Array [
            Object {
              "_links": Object {
                "show": "http://capco/step1/show-link",
              },
              "endAt": "2017-11-25T09:00:24+01:00",
              "startAt": "2017-01-10T09:00:24+01:00",
              "status": "open",
              "timeless": false,
              "title": "Open step 1",
              "type": "collect",
            },
          ],
          "title": "Name of my project",
        }
      }
    />
  </div>
  <ProjectPreviewProgressBar
    actualStep={
      Object {
        "_links": Object {
          "show": "http://capco/step1/show-link",
        },
        "endAt": "2017-11-25T09:00:24+01:00",
        "startAt": "2017-01-10T09:00:24+01:00",
        "status": "open",
        "timeless": false,
        "title": "Open step 1",
        "type": "collect",
      }
    }
    project={
      Object {
        "_links": Object {
          "show": "http://capco/show-link",
        },
        "hasParticipativeStep": true,
        "steps": Array [
          Object {
            "_links": Object {
              "show": "http://capco/step1/show-link",
            },
            "endAt": "2017-11-25T09:00:24+01:00",
            "startAt": "2017-01-10T09:00:24+01:00",
            "status": "open",
            "timeless": false,
            "title": "Open step 1",
            "type": "collect",
          },
        ],
        "title": "Name of my project",
      }
    }
  />
  <div
    className="project__preview__actions"
  >
    <a
      href="http://capco/step1/show-link"
    >
      <FormattedMessage
        id="project.preview.action.participe"
        values={Object {}}
      />
    </a>
     
     
    <span
      className="excerpt"
    >
      <span
        className="excerpt_dark"
      >
        4
      </span>
       
      <FormattedMessage
        id="count.hoursLeft"
        values={
          Object {
            "count": 4,
          }
        }
      />
    </span>
  </div>
</div>
`;

exports[`<ProjectPreviewBody /> should render correctly project preview body & elements for open participative step (minutes left) 1`] = `
<div
  className="box project__preview__body"
>
  <div
    className="project__preview__body__infos"
  >
    <Connect(ProjectPreviewThemes)
      project={
        Object {
          "_links": Object {
            "show": "http://capco/show-link",
          },
          "hasParticipativeStep": true,
          "steps": Array [
            Object {
              "_links": Object {
                "show": "http://capco/step1/show-link",
              },
              "endAt": "2017-11-25T09:00:24+01:00",
              "startAt": "2017-01-10T09:00:24+01:00",
              "status": "open",
              "timeless": false,
              "title": "Open step 1",
              "type": "collect",
            },
          ],
          "title": "Name of my project",
        }
      }
    />
    <h4
      className="project__preview__title"
      style={
        Object {
          "height": "auto",
          "lineHeight": "auto",
        }
      }
    >
      <OverlayTrigger
        defaultOverlayShown={false}
        overlay={
          <Tooltip
            bsClass="tooltip"
            id="project-undefined-tooltip"
            placement="right"
          >
            Name of my project
          </Tooltip>
        }
        placement="top"
        trigger={
          Array [
            "hover",
            "focus",
          ]
        }
      >
        <a
          href="http://capco/show-link"
        >
          <div
            style={
              Object {
                "width": "98%",
              }
            }
          >
            <Truncate
              ellipsis="…"
              lines={3}
            >
              Name of my project
            </Truncate>
          </div>
        </a>
      </OverlayTrigger>
    </h4>
    <ProjectPreviewCounters
      project={
        Object {
          "_links": Object {
            "show": "http://capco/show-link",
          },
          "hasParticipativeStep": true,
          "steps": Array [
            Object {
              "_links": Object {
                "show": "http://capco/step1/show-link",
              },
              "endAt": "2017-11-25T09:00:24+01:00",
              "startAt": "2017-01-10T09:00:24+01:00",
              "status": "open",
              "timeless": false,
              "title": "Open step 1",
              "type": "collect",
            },
          ],
          "title": "Name of my project",
        }
      }
    />
  </div>
  <ProjectPreviewProgressBar
    actualStep={
      Object {
        "_links": Object {
          "show": "http://capco/step1/show-link",
        },
        "endAt": "2017-11-25T09:00:24+01:00",
        "startAt": "2017-01-10T09:00:24+01:00",
        "status": "open",
        "timeless": false,
        "title": "Open step 1",
        "type": "collect",
      }
    }
    project={
      Object {
        "_links": Object {
          "show": "http://capco/show-link",
        },
        "hasParticipativeStep": true,
        "steps": Array [
          Object {
            "_links": Object {
              "show": "http://capco/step1/show-link",
            },
            "endAt": "2017-11-25T09:00:24+01:00",
            "startAt": "2017-01-10T09:00:24+01:00",
            "status": "open",
            "timeless": false,
            "title": "Open step 1",
            "type": "collect",
          },
        ],
        "title": "Name of my project",
      }
    }
  />
  <div
    className="project__preview__actions"
  >
    <a
      href="http://capco/step1/show-link"
    >
      <FormattedMessage
        id="project.preview.action.participe"
        values={Object {}}
      />
    </a>
     
     
    <span
      className="excerpt"
    >
      <span
        className="excerpt_dark"
      >
        20
      </span>
       
      <FormattedMessage
        id="count.minutesLeft"
        values={
          Object {
            "count": 20,
          }
        }
      />
    </span>
  </div>
</div>
`;

exports[`<ProjectPreviewBody /> should render correctly project preview body & elements for open step (with no actual participative step) 1`] = `
<div
  className="box project__preview__body"
>
  <div
    className="project__preview__body__infos"
  >
    <Connect(ProjectPreviewThemes)
      project={
        Object {
          "_links": Object {
            "show": "http://capco/show-link",
          },
          "hasParticipativeStep": true,
          "steps": Array [
            Object {
              "status": "closed",
              "title": "Closed step",
            },
            Object {
              "_links": Object {
                "show": "http://capco/step1/show-link",
              },
              "endAt": "2017-11-25T09:00:24+01:00",
              "startAt": "2017-01-10T09:00:24+01:00",
              "status": "open",
              "timeless": false,
              "title": "Open step 1",
              "type": "collect",
            },
            Object {
              "_links": Object {
                "show": "http://capco/step2/show-link",
              },
              "endAt": "2018-11-28T09:00:24+01:00",
              "startAt": "2017-11-20T09:00:24+01:00",
              "status": "open",
              "timeless": false,
              "title": "Open step 2",
              "type": "presentation",
            },
            Object {
              "status": "future",
              "title": "Future step",
            },
          ],
          "title": "Name of my project",
        }
      }
    />
    <h4
      className="project__preview__title"
      style={
        Object {
          "height": "auto",
          "lineHeight": "auto",
        }
      }
    >
      <OverlayTrigger
        defaultOverlayShown={false}
        overlay={
          <Tooltip
            bsClass="tooltip"
            id="project-undefined-tooltip"
            placement="right"
          >
            Name of my project
          </Tooltip>
        }
        placement="top"
        trigger={
          Array [
            "hover",
            "focus",
          ]
        }
      >
        <a
          href="http://capco/show-link"
        >
          <div
            style={
              Object {
                "width": "98%",
              }
            }
          >
            <Truncate
              ellipsis="…"
              lines={3}
            >
              Name of my project
            </Truncate>
          </div>
        </a>
      </OverlayTrigger>
    </h4>
    <ProjectPreviewCounters
      project={
        Object {
          "_links": Object {
            "show": "http://capco/show-link",
          },
          "hasParticipativeStep": true,
          "steps": Array [
            Object {
              "status": "closed",
              "title": "Closed step",
            },
            Object {
              "_links": Object {
                "show": "http://capco/step1/show-link",
              },
              "endAt": "2017-11-25T09:00:24+01:00",
              "startAt": "2017-01-10T09:00:24+01:00",
              "status": "open",
              "timeless": false,
              "title": "Open step 1",
              "type": "collect",
            },
            Object {
              "_links": Object {
                "show": "http://capco/step2/show-link",
              },
              "endAt": "2018-11-28T09:00:24+01:00",
              "startAt": "2017-11-20T09:00:24+01:00",
              "status": "open",
              "timeless": false,
              "title": "Open step 2",
              "type": "presentation",
            },
            Object {
              "status": "future",
              "title": "Future step",
            },
          ],
          "title": "Name of my project",
        }
      }
    />
  </div>
  <ProjectPreviewProgressBar
    actualStep={
      Object {
        "_links": Object {
          "show": "http://capco/step1/show-link",
        },
        "endAt": "2017-11-25T09:00:24+01:00",
        "startAt": "2017-01-10T09:00:24+01:00",
        "status": "open",
        "timeless": false,
        "title": "Open step 1",
        "type": "collect",
      }
    }
    project={
      Object {
        "_links": Object {
          "show": "http://capco/show-link",
        },
        "hasParticipativeStep": true,
        "steps": Array [
          Object {
            "status": "closed",
            "title": "Closed step",
          },
          Object {
            "_links": Object {
              "show": "http://capco/step1/show-link",
            },
            "endAt": "2017-11-25T09:00:24+01:00",
            "startAt": "2017-01-10T09:00:24+01:00",
            "status": "open",
            "timeless": false,
            "title": "Open step 1",
            "type": "collect",
          },
          Object {
            "_links": Object {
              "show": "http://capco/step2/show-link",
            },
            "endAt": "2018-11-28T09:00:24+01:00",
            "startAt": "2017-11-20T09:00:24+01:00",
            "status": "open",
            "timeless": false,
            "title": "Open step 2",
            "type": "presentation",
          },
          Object {
            "status": "future",
            "title": "Future step",
          },
        ],
        "title": "Name of my project",
      }
    }
  />
  <div
    className="project__preview__actions"
  >
    <a
      href="http://capco/step1/show-link"
    >
      <FormattedMessage
        id="project.preview.action.participe"
        values={Object {}}
      />
    </a>
     
     
    <span
      className="excerpt"
    >
      <span
        className="excerpt_dark"
      >
        20
      </span>
       
      <FormattedMessage
        id="count.minutesLeft"
        values={
          Object {
            "count": 20,
          }
        }
      />
    </span>
  </div>
</div>
`;

exports[`<ProjectPreviewBody /> should render correctly project preview body & elements for timeless step 1`] = `
<div
  className="box project__preview__body"
>
  <div
    className="project__preview__body__infos"
  >
    <Connect(ProjectPreviewThemes)
      project={
        Object {
          "_links": Object {
            "external": "http://capco/external-link",
            "show": "http://capco/show-link",
          },
          "hasParticipativeStep": false,
          "steps": Array [
            Object {
              "status": "closed",
              "title": "Closed step",
            },
            Object {
              "_links": Object {
                "show": "http://capco/timeless-step/show-link",
              },
              "endAt": null,
              "startAt": null,
              "status": "open",
              "timeless": true,
              "title": "timeless step",
              "type": "presentation",
            },
            Object {
              "_links": Object {
                "show": "http://capco/step/show-link",
              },
              "endAt": "2017-11-25T09:00:24+01:00",
              "startAt": "2017-11-10T09:00:24+01:00",
              "status": "open",
              "timeless": false,
              "title": "Open step",
              "type": "presentation",
            },
            Object {
              "status": "future",
              "title": "Future step",
            },
          ],
          "title": "Name of my project",
        }
      }
    />
    <h4
      className="project__preview__title"
      style={
        Object {
          "height": "auto",
          "lineHeight": "auto",
        }
      }
    >
      <OverlayTrigger
        defaultOverlayShown={false}
        overlay={
          <Tooltip
            bsClass="tooltip"
            id="project-undefined-tooltip"
            placement="right"
          >
            Name of my project
          </Tooltip>
        }
        placement="top"
        trigger={
          Array [
            "hover",
            "focus",
          ]
        }
      >
        <a
          href="http://capco/external-link"
        >
          <div
            style={
              Object {
                "width": "98%",
              }
            }
          >
            <Truncate
              ellipsis="…"
              lines={3}
            >
              Name of my project
            </Truncate>
            <svg
              id="Calque_1"
              style={
                Object {
                  "display": "inline-block",
                  "height": 16,
                  "marginLeft": 5,
                  "width": 16,
                }
              }
              version="1.1"
              viewBox="0 0 89.7 90.1"
              x="0px"
              xmlSpace="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0px"
            >
              <g
                className="externalLinkSvg"
              >
                <path
                  d="M85.5,0H56.9c-2.3,0-4.2,1.9-4.2,4.2s1.9,4.2,4.2,4.2h19.1L35.1,49.2c-1.6,1.6-1.6,4.3,0,5.9c0.8,0.8,1.9,1.2,2.9,1.2 s2.1-0.4,2.9-1.2l40.4-40.4v18.2c0,2.3,1.9,4.2,4.2,4.2s4.2-1.9,4.2-4.2V4.2C89.7,1.9,87.8,0,85.5,0z"
                />
                <path
                  d="M71.1,41.9c-2.3,0-4.2,1.9-4.2,4.2V79c0,1.5-1.3,2.8-2.8,2.8H11.1c-1.5,0-2.8-1.3-2.8-2.8V25.9c0-1.5,1.3-2.8,2.8-2.8h33 c2.3,0,4.2-1.9,4.2-4.2s-1.9-4.2-4.2-4.2h-33C5,14.8,0,19.7,0,25.9V79c0,6.1,5,11.1,11.1,11.1h53.1c6.1,0,11.1-5,11.1-11.1V46.1 C75.3,43.8,73.4,41.9,71.1,41.9z"
                />
              </g>
            </svg>
          </div>
        </a>
      </OverlayTrigger>
    </h4>
  </div>
  <ProjectPreviewProgressBar
    actualStep={
      Object {
        "_links": Object {
          "show": "http://capco/timeless-step/show-link",
        },
        "endAt": null,
        "startAt": null,
        "status": "open",
        "timeless": true,
        "title": "timeless step",
        "type": "presentation",
      }
    }
    project={
      Object {
        "_links": Object {
          "external": "http://capco/external-link",
          "show": "http://capco/show-link",
        },
        "hasParticipativeStep": false,
        "steps": Array [
          Object {
            "status": "closed",
            "title": "Closed step",
          },
          Object {
            "_links": Object {
              "show": "http://capco/timeless-step/show-link",
            },
            "endAt": null,
            "startAt": null,
            "status": "open",
            "timeless": true,
            "title": "timeless step",
            "type": "presentation",
          },
          Object {
            "_links": Object {
              "show": "http://capco/step/show-link",
            },
            "endAt": "2017-11-25T09:00:24+01:00",
            "startAt": "2017-11-10T09:00:24+01:00",
            "status": "open",
            "timeless": false,
            "title": "Open step",
            "type": "presentation",
          },
          Object {
            "status": "future",
            "title": "Future step",
          },
        ],
        "title": "Name of my project",
      }
    }
  />
  <div
    className="project__preview__actions"
  >
    <a
      href="http://capco/timeless-step/show-link"
    >
      <FormattedMessage
        id="project.preview.action.seeStep"
        values={Object {}}
      />
    </a>
     
     
  </div>
</div>
`;
